<resources>
    <string name="app_name">NewTalent</string>

    <!--authentication activity-->
    <string name="auth_bt_subsribe">S\'inscrire</string>
    <string name="auth_bt_exit">Annuler</string>
    <string name="auth_bt_login">Se connecter</string>
    <string name="auth_et_email">Email</string>
    <string name="auth_et_password">Password</string>
    <string name="auth_til_error_mandatory_field">Champ obligatoire</string>

    <!--Menu -->
    <string name="menu_title_crush">Coup de coeur</string>
    <string name="menu_title_comics">Comédiens</string>
    <string name="menu_title_music">Musique</string>
    <string name="menu_title_favourite">Vos favoris</string>
    <string name="menu_title_disconnect">Me deconnecter</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Action bar-->
    <string name="ab_favourite">Favourite</string>
    <!--Detail video-->
    <string name="base_yt_activity_rating">Notez cette video pour aider ce groupe à avancer :</string>
    <string name="base_yt_activity_button_submit">Je valide mon vote !</string>
    <!--Callback-->
    <string name="cb_empty_response_error">Empty response body</string>

    <!--ReclyclerView-->
    <string name="iv_description">Image répresentant la musique.</string>
    <string name="iv_description_cat">Image répresentant la catégorie.</string>
    <!--DUMB-->
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="assembleSpace">%1$s %2$s %3$s %4$s</string>

    <!--YOUTUBE API-->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

</resources>
